# auto-karate-agent

./: .gitignore  LICENSE  README.md  config.py  main.py  openapi.yaml  pom.xml  pyproject.toml  requirements.txt  setup.py  test_generator.py
.github/workflows/: api-tests.yml  tests.yml
scripts/: performance_monitorting.sh  run_all_tests.sh
src/auto_karate_agent/: ai_integration.py  config.py  core.py  data_generator.py  security_tester.py  template_manager.py  validators.py
src/auto_karate_agent/utils/: security_utils.py
templates/: crud_template.feature.j2
test_generator/: ai_integration.py  core.py  data_generator.py  security_tester.py  template_manager.py  test_runner.py
tests/integration/: test_generation_flow.py
tests/performance/: test_performance.py
tests/security/: test_code_quality.py
tests/unit/:  test_template_manager.py  conftest.py  test_ai_integration.py  test_core.py  test_data_generator.py  test_security_tester.py
