[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-karate-agent"
version = "0.1.0"
description = "Autonomous AI Agent for generating Karate DSL tests"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.8"  # Moved here
classifiers = [  # Moved here
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "prance>=0.21.8",
    "faker>=18.11.2",
    "jinja2>=3.1.2",
    "openai>=0.27.8",
    "pyyaml>=6.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "pytest-benchmark>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]  # Look for packages in the `src` directory